--- a/sample_config.ini
+++ b/sample_config.ini
@@ -1,7 +1,7 @@
 [pyrogram]
-bot_token = 1404797769:AAFYNkKB6oO9KAOPLpaH9sqEbT6j-w 
-api_id = 69420
-api_hash = 3fd6bf58638d2w4s869bd6ca7cc756cb9
+bot_token = "1487897358:AAHYQET1-vAfkEgR-R51e_7nzP1UNUPJPGM"
+api_id = 1667813
+api_hash = "1f6921c27bf6cd01aba471a14ff33bcb"
 
 
 [plugins]
