--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [pyrogram]
 BOT_TOKEN = "1487897358:AAHYQET1-vAfkEgR-R51e_7nzP1UNUPJPGM"
-APP_ID = 1667813
+API_ID = 1667813
 API_HASH = "1f6921c27bf6cd01aba471a14ff33bcb"
 
 
