--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [pyrogram]
-BOT_TOKEN = "1487897358:AAHYQET1-vAfkEgR-R51e_7nzP1UNUPJPGM"
-API_ID = 1667813
-API_HASH = "1f6921c27bf6cd01aba471a14ff33bcb"
+bot_token = 1487897358:AAHYQET1-vAfkEgR-R51e_7nzP1UNUPJPGM
+api_id = 1667813
+api_hash = 1f6921c27bf6cd01aba471a14ff33bcb
 
 
 [plugins]
